# flatris

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: .main.cpp.swp  .tetris_game.h.swp  main.cpp  tetris_game.cpp  tetris_game.h
src/blocks/: tetris_block.cpp  tetris_block.h
src/core/: app.cpp  app.h  app_cleanup.cpp  app_event.cpp  app_init.cpp  app_loop.cpp  app_render.cpp
src/map/: .tetris_map.cpp.swp  tetris_map.cpp  tetris_map.h
src/text/: text_manager.cpp  text_manager.h
